Import of RUPERTL/App-Zapzi-0.002 from CPAN.
gitpan-cpan-distribution: App-Zapzi
gitpan-cpan-version:      0.002
gitpan-cpan-path:         RUPERTL/App-Zapzi-0.002.tar.gz
gitpan-cpan-author:       RUPERTL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     later
 
 VERSION
-    version 0.001
+    version 0.002
 
 SYNOPSIS
       $ zapzi init
@@ -142,8 +142,11 @@ NAME
     ZAAP-zi in Cantonese.
 
 USAGE
-      $ zapzi help|h
+      $ zapzi help | h
         Shows this help text
+
+      $ zapzi version | v
+        Show version information
 
       $ zapzi init [--force]
         Initialises new zapzi database. Will not create a new database 
