--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     later
 
 VERSION
-    version 0.003
+    version 0.004
 
 SYNOPSIS
       $ zapzi init
@@ -161,16 +161,16 @@ USAGE
       $ zapzi list-folders | lsf
         Lists a summary of all folders.
 
-      $ zapzi make-folder | mkf FOLDER
+      $ zapzi make-folder | mkf | md FOLDER
         Make a new folder.
 
-      $ zapzi delete-folder | rmf FOLDER
+      $ zapzi delete-folder | rmf | rd FOLDER
         Remove a folder and all articles in it.
 
       $ zapzi delete-article | delete | rm ID
         Removes article ID.
 
-      $ zapzi show ID
+      $ zapzi show | cat ID
         Prints content of article to STDOUT
 
       $ zapzi publish [-f FOLDER]
