--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     later
 
 VERSION
-    version 0.004
+    version 0.005
 
 SYNOPSIS
       $ zapzi init
@@ -106,7 +106,8 @@ DESCRIPTION
     If everything worked OK, Zapzi will create a new eBook in the ebooks
     sub-directory of your Zapzi directory, eg "~/.zapzi/ebooks".
 
-    When you publish a folder, the articles are moved to the Archive folder.
+    When you publish a folder, the articles are moved to the Archive folder
+    unless you set the "--noarchive" option.
 
     Instead of publishing, if you want to see a copy of an article use
     "zapzi show". This will send a copy to the standard output. It will not
@@ -119,18 +120,19 @@ SUPPORT AND DEVELOPMENT
 
       https://github.com/rupertl/app-zapzi/
 
-FUTURE PLANS
+BUGS AND FUTURE PLANS
     This is an early version of Zapzi and although the basic functionality
     is there I plan to improve it further. If you have any suggestions
     please add them to the issue tracker at Github.
+
+    *   Improve text extraction and formatting - complex pages may not
+        render correctly or may miss sections at present
 
     *   Support other ways to fetch articles, eg FTP or IMAP for email.
 
     *   Support other article formats, eg mbox/maildir.
 
     *   Add the ability to read sources with state, eg RSS feeds.
-
-    *   Improve text extraction and formatting.
 
     *   Publish to other eBook formats such as EPUB or PDF.
 
@@ -173,8 +175,9 @@ USAGE
       $ zapzi show | cat ID
         Prints content of article to STDOUT
 
-      $ zapzi publish [-f FOLDER]
-        Publishes articles in FOLDER to an eBook.
+      $ zapzi publish | pub [-f FOLDER] [--noarchive]
+        Publishes articles in FOLDER to an eBook. Will archive articles unless
+        --noarchive is set.
 
 AUTHOR
     Rupert Lane <rupert@rupert-lane.org>
