--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     later
 
 VERSION
-    version 0.005
+    version 0.006
 
 SYNOPSIS
       $ zapzi init
@@ -66,9 +66,16 @@ DESCRIPTION
     you need to log into a site this will not work - save a copy of the page
     locally using your browser and then point Zapzi at the file.
 
-    Zapzi will detect the file type and if it is HTML it will use
-    HTML::ExtractMain to strip out non-essential parts of the page such as
-    menus. Other formats are treated as plain text with Markdown.
+  TRANSFORMERS
+    By default, Zapzi will detect the file type and if it is HTML it will
+    use HTML::ExtractMain to strip out non-essential parts of the page such
+    as menus. Other formats are treated as plain text with Markdown.
+
+    You can override this by setting the "-t" option to "add". For example,
+    if HTMLExtractMain does not correctly determine which parts of the
+    article are readable you can get the complete HTML text instead:
+
+      $ zapzi add -t HTML 'http://example.com/article?id=4'
 
   FOLDERS
     By default, Zapzi will store articles in the 'Inbox' folder. This can be
@@ -154,8 +161,12 @@ USAGE
         Initialises new zapzi database. Will not create a new database 
         if one exists already unless you set --force.
 
-      $ zapzi add FILE | URL
+      $ zapzi add [-t TRANSFORMER] FILE | URL
         Adds article to database. Accepts multiple file names or URLs.
+        TRANSFORMER determines how to extract the text from the article
+        and can be HTML, HTMLExtractMain or TextMarkdown
+        If not specified, Zapzi will choose the best option based on the
+        content type of the article.
 
       $ zapzi list | ls [-f FOLDER]
         Lists articles in FOLDER.
