--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     later
 
 VERSION
-    version 0.009
+    version 0.010
 
 SYNOPSIS
       $ zapzi init
@@ -40,8 +40,7 @@ DESCRIPTION
     *   Articles can be stored in different folders to organise your
         reading.
 
-    *   eBooks are created in MOBI format (other formats should be added
-        later).
+    *   eBooks can be created in MOBI, EPUB or HTML format.
 
     *   Once you publish a folder of articles to an eBook file, the articles
         are archived so you can retrieve them later if needed.
@@ -113,6 +112,18 @@ DESCRIPTION
     will publish articles from the Inbox folder; use the "-f" option to
     select another folder.
 
+    You can specify the format of the eBook with the "--format" switch.
+    Options are:
+
+    *   MOBI (the default)
+
+    *   EPUB
+
+    *   HTML (a single HTML file containing all the articles)
+
+    You can also set the encoding with "--encoding" but Zapzi will normally
+    set this correctly based on the content and publication format.
+
     If everything worked OK, Zapzi will create a new eBook in the ebooks
     sub-directory of your Zapzi directory, eg "~/.zapzi/ebooks".
 
@@ -153,7 +164,7 @@ BUGS AND FUTURE PLANS
 
     *   Add the ability to read sources with state, eg RSS feeds.
 
-    *   Publish to other eBook formats such as EPUB or PDF.
+    *   Publish to other eBook formats such as PDF.
 
     *   Add options to distribute published eBooks, eg by email or copy to
         an eReader.
@@ -202,9 +213,11 @@ USAGE
       $ zapzi show | view ID
         Opens a browser to view the readable text of article ID
 
-      $ zapzi publish | pub [-f FOLDER] [--noarchive]
-        Publishes articles in FOLDER to an eBook. Will archive articles unless
-        --noarchive is set.
+      $ zapzi publish | pub [-f FOLDER] [--format FORMAT]
+                            [--encoding ENC] [--noarchive]
+        Publishes articles in FOLDER to an eBook.
+        Format can be specified as MOBI, EPUB or HTML.
+        Will archive articles unless --noarchive is set.
 
 AUTHOR
     Rupert Lane <rupert@rupert-lane.org>
