Import of RUPERTL/App-Zapzi-0.011 from CPAN.
gitpan-cpan-distribution: App-Zapzi
gitpan-cpan-version:      0.011
gitpan-cpan-path:         RUPERTL/App-Zapzi-0.011.tar.gz
gitpan-cpan-author:       RUPERTL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,11 +3,14 @@ NAME
     later
 
 VERSION
-    version 0.010
+    version 0.011
 
 SYNOPSIS
       $ zapzi init
       Created Zapzi directory ~/.zapzi
+
+      Select configuration options. Press enter to accept defaults.
+      Format to publish eBooks in. (EPUB, MOBI or HTML) [default MOBI] : MOBI
 
       $ zapzi add ~/src/foo/README.txt
       Added article 2 to folder Inbox
@@ -45,14 +48,20 @@ DESCRIPTION
     *   Once you publish a folder of articles to an eBook file, the articles
         are archived so you can retrieve them later if needed.
 
-  CONFIGURATION
-    Zapzi needs very little configuration to get running - just type
+  SETUP
+    To get started, type:
 
       $ zapzi init
 
     and it will create a directory (by default ~/.zapzi) to store its
     database and files. You can override this directory by setting the
     environment variable "ZAPZI_DIR".
+
+    Zapzi will then prompt for configuration options such as preferred
+    format for publishing eBooks. If you run this command non-interactively
+    it will use defaults.
+
+    To view or change these options see CONFIGURATION for further details.
 
   ADDING ARTICLES
     To add an article, use "zapzi add" with a filename on your computer, the
@@ -106,6 +115,12 @@ DESCRIPTION
       Foo      1 05-Jul-2013 Project readme
 
     Use the "-l" option to "ls" to get a more detailed listing.
+
+    You can delete articles with "zapzi rm" and move articles between
+    folders with "zapzi mv", for example:
+
+      $ zapzi rm 10                 # remove article 10 from the database
+      $ zapzi mv 12 13 Foo          # move articles 12 and 13 to folder Foo
 
   PUBLISHING
     To create an eBook, run "zapzi publish" or "zapzi pub". By default this
@@ -173,6 +188,26 @@ NAME
     Zapzi comes from the Chinese word 雜誌, meaning magazine. It is pronounced
     ZAAP-zi in Cantonese.
 
+CONFIGURATION
+    To view or change configuration variables use the "config get" or
+    "config set" commands, eg:
+
+      $ zapzi config get                      # to see all set variables
+      $ zapzi config get publish_format       # to see one variable
+      $ zapzi config set publish_format EPUB  # to set a variable
+
+    The following configuration variables are available
+
+    publish_format
+        The eBook format Zapzi will use when running the "publish" command.
+        Default is MOBI; can be set to EPUB or HTML.
+
+    publish_encoding
+        The encoding used to create an eBook when running the "publish"
+        command. Default is unset, which means Zapzi will choose the best
+        encoding for the publication format. Can be set to UTF-8 or
+        ISO-8859-1.
+
 USAGE
       $ zapzi help | h
         Shows this help text
@@ -183,6 +218,13 @@ USAGE
       $ zapzi init [--force]
         Initialises new zapzi database. Will not create a new database
         if one exists already unless you set --force.
+
+      $ zapzi config get [KEYS]
+        Prints configuration variables specified by KEYS, or all config
+        variables if KEYS not provided.
+
+      $ zapzi config set KEY VALUE
+        Set configuration variable KEY to VALUE.
 
       $ zapzi add [-t TRANSFORMER] FILE | URL | POD
         Adds article to database. Accepts multiple file names or URLs.
@@ -206,6 +248,9 @@ USAGE
 
       $ zapzi delete-article | delete | rm ID
         Removes article ID.
+
+      $ zapzi move | mv ARTICLES FOLDER
+        Move one or more articles to the given folder
 
       $ zapzi export | cat ID
         Prints content of readable article to STDOUT
